y.output
   0  $accept : programa $end

   1  programa : declaraciones funciones

   2  declaraciones : tipo lista_var PYC declaraciones
   3                | tipo_registro lista_var PYC declaraciones
   4                |

   5  tipo_registro : ESTRUCTURA INICIO declaraciones FIN

   6  tipo : base tipo_arreglo

   7  base : SIN
   8       | ENT
   9       | REAL
  10       | DREAL
  11       | CAR

  12  tipo_arreglo : CORIZQ NUM CORDER tipo_arreglo
  13               |

  14  lista_var : ID A

  15  A : COMA ID A
  16    |

  17  funciones : DEF tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias FIN funciones
  18            |

  19  argumentos : lista_arg
  20             | SIN

  21  lista_arg : lista_arg COMA arg
  22            | arg

  23  arg : tipo_arg ID

  24  tipo_arg : base param_arr

  25  param_arr : CORIZQ CORDER param_arr
  26            |

  27  sentencias : sentencias sentencia
  28             |

  29  sentencia : SI e_bool ENTONCES sentencias FIN
  30            | SI e_bool ENTONCES sentencias SINO sentencias FIN
  31            | MIENTRAS e_bool HACER sentencias FIN
  32            | HACER sentencias MIENTRAS e_bool PYC
  33            | SEGUN LPAR variable RPAR HACER casos predeterminado FIN
  34            | variable ASIG expresion PYC
  35            | ESCRIBIR expresion PYC
  36            | LEER variable PYC
  37            | DEVOLVER PYC
  38            | DEVOLVER expresion PYC
  39            | TERMINAR PYC
  40            | INICIO sentencias FIN

  41  casos : CASO NUM DOSP sentencias casos
  42        | CASO NUM DOSP sentencias

  43  predeterminado : PRED DOSP sentencias
  44                 |

  45  e_bool : e_bool O e_bool
  46         | e_bool Y e_bool
  47         | NO e_bool
  48         | relacional
  49         | VERDADERO
  50         | FALSO

  51  relacional : relacional OPERADOR_RELACIONAL relacional
  52             | expresion

  53  expresion : expresion SUM_RES expresion
  54            | expresion MUL_DIV_MOD expresion
  55            | LPAR expresion RPAR
  56            | variable
  57            | NUM
  58            | CADENA
  59            | CARACTER

  60  variable : ID variable_comp

  61  variable_comp : dato_est_sim
  62                | arreglo
  63                | LPAR parametros RPAR

  64  dato_est_sim : dato_est_sim PUNTO ID
  65               |

  66  arreglo : CORIZQ expresion CORDER
  67          | CORIZQ expresion CORDER arreglo

  68  parametros : lista_param
  69             |

  70  lista_param : lista_param COMA expresion
  71              | expresion

state 0
	$accept : . programa $end  (0)
	declaraciones : .  (4)

	ESTRUCTURA  shift 1
	SIN  shift 2
	ENT  shift 3
	REAL  shift 4
	DREAL  shift 5
	CAR  shift 6
	$end  reduce 4
	DEF  reduce 4

	programa  goto 7
	declaraciones  goto 8
	tipo_registro  goto 9
	tipo  goto 10
	base  goto 11


state 1
	tipo_registro : ESTRUCTURA . INICIO declaraciones FIN  (5)

	INICIO  shift 12
	.  error


state 2
	base : SIN .  (7)

	.  reduce 7


state 3
	base : ENT .  (8)

	.  reduce 8


state 4
	base : REAL .  (9)

	.  reduce 9


state 5
	base : DREAL .  (10)

	.  reduce 10


state 6
	base : CAR .  (11)

	.  reduce 11


state 7
	$accept : programa . $end  (0)

	$end  accept


state 8
	programa : declaraciones . funciones  (1)
	funciones : .  (18)

	DEF  shift 13
	$end  reduce 18

	funciones  goto 14


state 9
	declaraciones : tipo_registro . lista_var PYC declaraciones  (3)

	ID  shift 15
	.  error

	lista_var  goto 16


state 10
	declaraciones : tipo . lista_var PYC declaraciones  (2)

	ID  shift 15
	.  error

	lista_var  goto 17


state 11
	tipo : base . tipo_arreglo  (6)
	tipo_arreglo : .  (13)

	CORIZQ  shift 18
	ID  reduce 13

	tipo_arreglo  goto 19


state 12
	tipo_registro : ESTRUCTURA INICIO . declaraciones FIN  (5)
	declaraciones : .  (4)

	ESTRUCTURA  shift 1
	SIN  shift 2
	ENT  shift 3
	REAL  shift 4
	DREAL  shift 5
	CAR  shift 6
	FIN  reduce 4

	declaraciones  goto 20
	tipo_registro  goto 9
	tipo  goto 10
	base  goto 11


state 13
	funciones : DEF . tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias FIN funciones  (17)

	SIN  shift 2
	ENT  shift 3
	REAL  shift 4
	DREAL  shift 5
	CAR  shift 6
	.  error

	tipo  goto 21
	base  goto 11


state 14
	programa : declaraciones funciones .  (1)

	.  reduce 1


state 15
	lista_var : ID . A  (14)
	A : .  (16)

	COMA  shift 22
	PYC  reduce 16

	A  goto 23


state 16
	declaraciones : tipo_registro lista_var . PYC declaraciones  (3)

	PYC  shift 24
	.  error


state 17
	declaraciones : tipo lista_var . PYC declaraciones  (2)

	PYC  shift 25
	.  error


state 18
	tipo_arreglo : CORIZQ . NUM CORDER tipo_arreglo  (12)

	NUM  shift 26
	.  error


state 19
	tipo : base tipo_arreglo .  (6)

	.  reduce 6


state 20
	tipo_registro : ESTRUCTURA INICIO declaraciones . FIN  (5)

	FIN  shift 27
	.  error


state 21
	funciones : DEF tipo . ID LPAR argumentos RPAR INICIO declaraciones sentencias FIN funciones  (17)

	ID  shift 28
	.  error


state 22
	A : COMA . ID A  (15)

	ID  shift 29
	.  error


state 23
	lista_var : ID A .  (14)

	.  reduce 14


state 24
	declaraciones : tipo_registro lista_var PYC . declaraciones  (3)
	declaraciones : .  (4)

	ESTRUCTURA  shift 1
	SIN  shift 2
	ENT  shift 3
	REAL  shift 4
	DREAL  shift 5
	CAR  shift 6
	$end  reduce 4
	INICIO  reduce 4
	FIN  reduce 4
	DEF  reduce 4
	SI  reduce 4
	MIENTRAS  reduce 4
	HACER  reduce 4
	SEGUN  reduce 4
	ESCRIBIR  reduce 4
	DEVOLVER  reduce 4
	LEER  reduce 4
	TERMINAR  reduce 4
	ID  reduce 4

	declaraciones  goto 30
	tipo_registro  goto 9
	tipo  goto 10
	base  goto 11


state 25
	declaraciones : tipo lista_var PYC . declaraciones  (2)
	declaraciones : .  (4)

	ESTRUCTURA  shift 1
	SIN  shift 2
	ENT  shift 3
	REAL  shift 4
	DREAL  shift 5
	CAR  shift 6
	$end  reduce 4
	INICIO  reduce 4
	FIN  reduce 4
	DEF  reduce 4
	SI  reduce 4
	MIENTRAS  reduce 4
	HACER  reduce 4
	SEGUN  reduce 4
	ESCRIBIR  reduce 4
	DEVOLVER  reduce 4
	LEER  reduce 4
	TERMINAR  reduce 4
	ID  reduce 4

	declaraciones  goto 31
	tipo_registro  goto 9
	tipo  goto 10
	base  goto 11


state 26
	tipo_arreglo : CORIZQ NUM . CORDER tipo_arreglo  (12)

	CORDER  shift 32
	.  error


state 27
	tipo_registro : ESTRUCTURA INICIO declaraciones FIN .  (5)

	.  reduce 5


state 28
	funciones : DEF tipo ID . LPAR argumentos RPAR INICIO declaraciones sentencias FIN funciones  (17)

	LPAR  shift 33
	.  error


state 29
	A : COMA ID . A  (15)
	A : .  (16)

	COMA  shift 22
	PYC  reduce 16

	A  goto 34


state 30
	declaraciones : tipo_registro lista_var PYC declaraciones .  (3)

	.  reduce 3


state 31
	declaraciones : tipo lista_var PYC declaraciones .  (2)

	.  reduce 2


state 32
	tipo_arreglo : CORIZQ NUM CORDER . tipo_arreglo  (12)
	tipo_arreglo : .  (13)

	CORIZQ  shift 18
	ID  reduce 13

	tipo_arreglo  goto 35


state 33
	funciones : DEF tipo ID LPAR . argumentos RPAR INICIO declaraciones sentencias FIN funciones  (17)

	SIN  shift 36
	ENT  shift 3
	REAL  shift 4
	DREAL  shift 5
	CAR  shift 6
	.  error

	argumentos  goto 37
	lista_arg  goto 38
	arg  goto 39
	tipo_arg  goto 40
	base  goto 41


state 34
	A : COMA ID A .  (15)

	.  reduce 15


state 35
	tipo_arreglo : CORIZQ NUM CORDER tipo_arreglo .  (12)

	.  reduce 12


state 36
	base : SIN .  (7)
	argumentos : SIN .  (20)

	ID  reduce 7
	CORIZQ  reduce 7
	RPAR  reduce 20


state 37
	funciones : DEF tipo ID LPAR argumentos . RPAR INICIO declaraciones sentencias FIN funciones  (17)

	RPAR  shift 42
	.  error


state 38
	argumentos : lista_arg .  (19)
	lista_arg : lista_arg . COMA arg  (21)

	COMA  shift 43
	RPAR  reduce 19


state 39
	lista_arg : arg .  (22)

	.  reduce 22


state 40
	arg : tipo_arg . ID  (23)

	ID  shift 44
	.  error


state 41
	tipo_arg : base . param_arr  (24)
	param_arr : .  (26)

	CORIZQ  shift 45
	ID  reduce 26

	param_arr  goto 46


state 42
	funciones : DEF tipo ID LPAR argumentos RPAR . INICIO declaraciones sentencias FIN funciones  (17)

	INICIO  shift 47
	.  error


state 43
	lista_arg : lista_arg COMA . arg  (21)

	SIN  shift 2
	ENT  shift 3
	REAL  shift 4
	DREAL  shift 5
	CAR  shift 6
	.  error

	arg  goto 48
	tipo_arg  goto 40
	base  goto 41


state 44
	arg : tipo_arg ID .  (23)

	.  reduce 23


state 45
	param_arr : CORIZQ . CORDER param_arr  (25)

	CORDER  shift 49
	.  error


state 46
	tipo_arg : base param_arr .  (24)

	.  reduce 24


state 47
	funciones : DEF tipo ID LPAR argumentos RPAR INICIO . declaraciones sentencias FIN funciones  (17)
	declaraciones : .  (4)

	ESTRUCTURA  shift 1
	SIN  shift 2
	ENT  shift 3
	REAL  shift 4
	DREAL  shift 5
	CAR  shift 6
	INICIO  reduce 4
	FIN  reduce 4
	SI  reduce 4
	MIENTRAS  reduce 4
	HACER  reduce 4
	SEGUN  reduce 4
	ESCRIBIR  reduce 4
	DEVOLVER  reduce 4
	LEER  reduce 4
	TERMINAR  reduce 4
	ID  reduce 4

	declaraciones  goto 50
	tipo_registro  goto 9
	tipo  goto 10
	base  goto 11


state 48
	lista_arg : lista_arg COMA arg .  (21)

	.  reduce 21


state 49
	param_arr : CORIZQ CORDER . param_arr  (25)
	param_arr : .  (26)

	CORIZQ  shift 45
	ID  reduce 26

	param_arr  goto 51


state 50
	funciones : DEF tipo ID LPAR argumentos RPAR INICIO declaraciones . sentencias FIN funciones  (17)
	sentencias : .  (28)

	.  reduce 28

	sentencias  goto 52


state 51
	param_arr : CORIZQ CORDER param_arr .  (25)

	.  reduce 25


state 52
	funciones : DEF tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias . FIN funciones  (17)
	sentencias : sentencias . sentencia  (27)

	INICIO  shift 53
	FIN  shift 54
	SI  shift 55
	MIENTRAS  shift 56
	HACER  shift 57
	SEGUN  shift 58
	ESCRIBIR  shift 59
	DEVOLVER  shift 60
	LEER  shift 61
	TERMINAR  shift 62
	ID  shift 63
	.  error

	sentencia  goto 64
	variable  goto 65


state 53
	sentencia : INICIO . sentencias FIN  (40)
	sentencias : .  (28)

	.  reduce 28

	sentencias  goto 66


state 54
	funciones : DEF tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias FIN . funciones  (17)
	funciones : .  (18)

	DEF  shift 13
	$end  reduce 18

	funciones  goto 67


state 55
	sentencia : SI . e_bool ENTONCES sentencias FIN  (29)
	sentencia : SI . e_bool ENTONCES sentencias SINO sentencias FIN  (30)

	FALSO  shift 68
	VERDADERO  shift 69
	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	NO  shift 73
	LPAR  shift 74
	.  error

	e_bool  goto 75
	relacional  goto 76
	expresion  goto 77
	variable  goto 78


state 56
	sentencia : MIENTRAS . e_bool HACER sentencias FIN  (31)

	FALSO  shift 68
	VERDADERO  shift 69
	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	NO  shift 73
	LPAR  shift 74
	.  error

	e_bool  goto 79
	relacional  goto 76
	expresion  goto 77
	variable  goto 78


state 57
	sentencia : HACER . sentencias MIENTRAS e_bool PYC  (32)
	sentencias : .  (28)

	.  reduce 28

	sentencias  goto 80


state 58
	sentencia : SEGUN . LPAR variable RPAR HACER casos predeterminado FIN  (33)

	LPAR  shift 81
	.  error


state 59
	sentencia : ESCRIBIR . expresion PYC  (35)

	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	LPAR  shift 74
	.  error

	expresion  goto 82
	variable  goto 78


state 60
	sentencia : DEVOLVER . PYC  (37)
	sentencia : DEVOLVER . expresion PYC  (38)

	PYC  shift 83
	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	LPAR  shift 74
	.  error

	expresion  goto 84
	variable  goto 78


state 61
	sentencia : LEER . variable PYC  (36)

	ID  shift 63
	.  error

	variable  goto 85


state 62
	sentencia : TERMINAR . PYC  (39)

	PYC  shift 86
	.  error


state 63
	variable : ID . variable_comp  (60)
	dato_est_sim : .  (65)

	CORIZQ  shift 87
	LPAR  shift 88
	PYC  reduce 65
	ENTONCES  reduce 65
	HACER  reduce 65
	COMA  reduce 65
	ASIG  reduce 65
	O  reduce 65
	Y  reduce 65
	OPERADOR_RELACIONAL  reduce 65
	SUM_RES  reduce 65
	MUL_DIV_MOD  reduce 65
	PUNTO  reduce 65
	CORDER  reduce 65
	RPAR  reduce 65

	arreglo  goto 89
	dato_est_sim  goto 90
	variable_comp  goto 91


state 64
	sentencias : sentencias sentencia .  (27)

	.  reduce 27


state 65
	sentencia : variable . ASIG expresion PYC  (34)

	ASIG  shift 92
	.  error


state 66
	sentencias : sentencias . sentencia  (27)
	sentencia : INICIO sentencias . FIN  (40)

	INICIO  shift 53
	FIN  shift 93
	SI  shift 55
	MIENTRAS  shift 56
	HACER  shift 57
	SEGUN  shift 58
	ESCRIBIR  shift 59
	DEVOLVER  shift 60
	LEER  shift 61
	TERMINAR  shift 62
	ID  shift 63
	.  error

	sentencia  goto 64
	variable  goto 65


state 67
	funciones : DEF tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias FIN funciones .  (17)

	.  reduce 17


state 68
	e_bool : FALSO .  (50)

	.  reduce 50


state 69
	e_bool : VERDADERO .  (49)

	.  reduce 49


state 70
	expresion : CARACTER .  (59)

	.  reduce 59


state 71
	expresion : CADENA .  (58)

	.  reduce 58


state 72
	expresion : NUM .  (57)

	.  reduce 57


state 73
	e_bool : NO . e_bool  (47)

	FALSO  shift 68
	VERDADERO  shift 69
	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	NO  shift 73
	LPAR  shift 74
	.  error

	e_bool  goto 94
	relacional  goto 76
	expresion  goto 77
	variable  goto 78


state 74
	expresion : LPAR . expresion RPAR  (55)

	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	LPAR  shift 74
	.  error

	expresion  goto 95
	variable  goto 78


state 75
	sentencia : SI e_bool . ENTONCES sentencias FIN  (29)
	sentencia : SI e_bool . ENTONCES sentencias SINO sentencias FIN  (30)
	e_bool : e_bool . O e_bool  (45)
	e_bool : e_bool . Y e_bool  (46)

	ENTONCES  shift 96
	O  shift 97
	Y  shift 98
	.  error


state 76
	e_bool : relacional .  (48)
	relacional : relacional . OPERADOR_RELACIONAL relacional  (51)

	OPERADOR_RELACIONAL  shift 99
	PYC  reduce 48
	ENTONCES  reduce 48
	HACER  reduce 48
	O  reduce 48
	Y  reduce 48


state 77
	relacional : expresion .  (52)
	expresion : expresion . SUM_RES expresion  (53)
	expresion : expresion . MUL_DIV_MOD expresion  (54)

	SUM_RES  shift 100
	MUL_DIV_MOD  shift 101
	PYC  reduce 52
	ENTONCES  reduce 52
	HACER  reduce 52
	O  reduce 52
	Y  reduce 52
	OPERADOR_RELACIONAL  reduce 52


state 78
	expresion : variable .  (56)

	.  reduce 56


state 79
	sentencia : MIENTRAS e_bool . HACER sentencias FIN  (31)
	e_bool : e_bool . O e_bool  (45)
	e_bool : e_bool . Y e_bool  (46)

	HACER  shift 102
	O  shift 97
	Y  shift 98
	.  error


state 80
	sentencias : sentencias . sentencia  (27)
	sentencia : HACER sentencias . MIENTRAS e_bool PYC  (32)

	INICIO  shift 53
	SI  shift 55
	MIENTRAS  shift 103
	HACER  shift 57
	SEGUN  shift 58
	ESCRIBIR  shift 59
	DEVOLVER  shift 60
	LEER  shift 61
	TERMINAR  shift 62
	ID  shift 63
	.  error

	sentencia  goto 64
	variable  goto 65


state 81
	sentencia : SEGUN LPAR . variable RPAR HACER casos predeterminado FIN  (33)

	ID  shift 63
	.  error

	variable  goto 104


state 82
	sentencia : ESCRIBIR expresion . PYC  (35)
	expresion : expresion . SUM_RES expresion  (53)
	expresion : expresion . MUL_DIV_MOD expresion  (54)

	PYC  shift 105
	SUM_RES  shift 100
	MUL_DIV_MOD  shift 101
	.  error


state 83
	sentencia : DEVOLVER PYC .  (37)

	.  reduce 37


state 84
	sentencia : DEVOLVER expresion . PYC  (38)
	expresion : expresion . SUM_RES expresion  (53)
	expresion : expresion . MUL_DIV_MOD expresion  (54)

	PYC  shift 106
	SUM_RES  shift 100
	MUL_DIV_MOD  shift 101
	.  error


state 85
	sentencia : LEER variable . PYC  (36)

	PYC  shift 107
	.  error


state 86
	sentencia : TERMINAR PYC .  (39)

	.  reduce 39


state 87
	arreglo : CORIZQ . expresion CORDER  (66)
	arreglo : CORIZQ . expresion CORDER arreglo  (67)

	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	LPAR  shift 74
	.  error

	expresion  goto 108
	variable  goto 78


state 88
	variable_comp : LPAR . parametros RPAR  (63)
	parametros : .  (69)

	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	LPAR  shift 74
	RPAR  reduce 69

	expresion  goto 109
	variable  goto 78
	parametros  goto 110
	lista_param  goto 111


state 89
	variable_comp : arreglo .  (62)

	.  reduce 62


state 90
	variable_comp : dato_est_sim .  (61)
	dato_est_sim : dato_est_sim . PUNTO ID  (64)

	PUNTO  shift 112
	PYC  reduce 61
	ENTONCES  reduce 61
	HACER  reduce 61
	COMA  reduce 61
	ASIG  reduce 61
	O  reduce 61
	Y  reduce 61
	OPERADOR_RELACIONAL  reduce 61
	SUM_RES  reduce 61
	MUL_DIV_MOD  reduce 61
	CORDER  reduce 61
	RPAR  reduce 61


state 91
	variable : ID variable_comp .  (60)

	.  reduce 60


state 92
	sentencia : variable ASIG . expresion PYC  (34)

	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	LPAR  shift 74
	.  error

	expresion  goto 113
	variable  goto 78


state 93
	sentencia : INICIO sentencias FIN .  (40)

	.  reduce 40


state 94
	e_bool : e_bool . O e_bool  (45)
	e_bool : e_bool . Y e_bool  (46)
	e_bool : NO e_bool .  (47)

	.  reduce 47


state 95
	expresion : expresion . SUM_RES expresion  (53)
	expresion : expresion . MUL_DIV_MOD expresion  (54)
	expresion : LPAR expresion . RPAR  (55)

	SUM_RES  shift 100
	MUL_DIV_MOD  shift 101
	RPAR  shift 114
	.  error


state 96
	sentencia : SI e_bool ENTONCES . sentencias FIN  (29)
	sentencia : SI e_bool ENTONCES . sentencias SINO sentencias FIN  (30)
	sentencias : .  (28)

	.  reduce 28

	sentencias  goto 115


state 97
	e_bool : e_bool O . e_bool  (45)

	FALSO  shift 68
	VERDADERO  shift 69
	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	NO  shift 73
	LPAR  shift 74
	.  error

	e_bool  goto 116
	relacional  goto 76
	expresion  goto 77
	variable  goto 78


state 98
	e_bool : e_bool Y . e_bool  (46)

	FALSO  shift 68
	VERDADERO  shift 69
	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	NO  shift 73
	LPAR  shift 74
	.  error

	e_bool  goto 117
	relacional  goto 76
	expresion  goto 77
	variable  goto 78


state 99
	relacional : relacional OPERADOR_RELACIONAL . relacional  (51)

	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	LPAR  shift 74
	.  error

	relacional  goto 118
	expresion  goto 77
	variable  goto 78


state 100
	expresion : expresion SUM_RES . expresion  (53)

	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	LPAR  shift 74
	.  error

	expresion  goto 119
	variable  goto 78


state 101
	expresion : expresion MUL_DIV_MOD . expresion  (54)

	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	LPAR  shift 74
	.  error

	expresion  goto 120
	variable  goto 78


state 102
	sentencia : MIENTRAS e_bool HACER . sentencias FIN  (31)
	sentencias : .  (28)

	.  reduce 28

	sentencias  goto 121


state 103
	sentencia : MIENTRAS . e_bool HACER sentencias FIN  (31)
	sentencia : HACER sentencias MIENTRAS . e_bool PYC  (32)

	FALSO  shift 68
	VERDADERO  shift 69
	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	NO  shift 73
	LPAR  shift 74
	.  error

	e_bool  goto 122
	relacional  goto 76
	expresion  goto 77
	variable  goto 78


state 104
	sentencia : SEGUN LPAR variable . RPAR HACER casos predeterminado FIN  (33)

	RPAR  shift 123
	.  error


state 105
	sentencia : ESCRIBIR expresion PYC .  (35)

	.  reduce 35


state 106
	sentencia : DEVOLVER expresion PYC .  (38)

	.  reduce 38


state 107
	sentencia : LEER variable PYC .  (36)

	.  reduce 36


state 108
	expresion : expresion . SUM_RES expresion  (53)
	expresion : expresion . MUL_DIV_MOD expresion  (54)
	arreglo : CORIZQ expresion . CORDER  (66)
	arreglo : CORIZQ expresion . CORDER arreglo  (67)

	SUM_RES  shift 100
	MUL_DIV_MOD  shift 101
	CORDER  shift 124
	.  error


state 109
	expresion : expresion . SUM_RES expresion  (53)
	expresion : expresion . MUL_DIV_MOD expresion  (54)
	lista_param : expresion .  (71)

	SUM_RES  shift 100
	MUL_DIV_MOD  shift 101
	COMA  reduce 71
	RPAR  reduce 71


state 110
	variable_comp : LPAR parametros . RPAR  (63)

	RPAR  shift 125
	.  error


state 111
	parametros : lista_param .  (68)
	lista_param : lista_param . COMA expresion  (70)

	COMA  shift 126
	RPAR  reduce 68


state 112
	dato_est_sim : dato_est_sim PUNTO . ID  (64)

	ID  shift 127
	.  error


state 113
	sentencia : variable ASIG expresion . PYC  (34)
	expresion : expresion . SUM_RES expresion  (53)
	expresion : expresion . MUL_DIV_MOD expresion  (54)

	PYC  shift 128
	SUM_RES  shift 100
	MUL_DIV_MOD  shift 101
	.  error


state 114
	expresion : LPAR expresion RPAR .  (55)

	.  reduce 55


state 115
	sentencias : sentencias . sentencia  (27)
	sentencia : SI e_bool ENTONCES sentencias . FIN  (29)
	sentencia : SI e_bool ENTONCES sentencias . SINO sentencias FIN  (30)

	INICIO  shift 53
	FIN  shift 129
	SI  shift 55
	MIENTRAS  shift 56
	HACER  shift 57
	SEGUN  shift 58
	ESCRIBIR  shift 59
	DEVOLVER  shift 60
	LEER  shift 61
	TERMINAR  shift 62
	ID  shift 63
	SINO  shift 130
	.  error

	sentencia  goto 64
	variable  goto 65


state 116
	e_bool : e_bool . O e_bool  (45)
	e_bool : e_bool O e_bool .  (45)
	e_bool : e_bool . Y e_bool  (46)

	Y  shift 98
	PYC  reduce 45
	ENTONCES  reduce 45
	HACER  reduce 45
	O  reduce 45


state 117
	e_bool : e_bool . O e_bool  (45)
	e_bool : e_bool . Y e_bool  (46)
	e_bool : e_bool Y e_bool .  (46)

	.  reduce 46


state 118
	relacional : relacional . OPERADOR_RELACIONAL relacional  (51)
	relacional : relacional OPERADOR_RELACIONAL relacional .  (51)

	.  reduce 51


state 119
	expresion : expresion . SUM_RES expresion  (53)
	expresion : expresion SUM_RES expresion .  (53)
	expresion : expresion . MUL_DIV_MOD expresion  (54)

	MUL_DIV_MOD  shift 101
	PYC  reduce 53
	ENTONCES  reduce 53
	HACER  reduce 53
	COMA  reduce 53
	O  reduce 53
	Y  reduce 53
	OPERADOR_RELACIONAL  reduce 53
	SUM_RES  reduce 53
	CORDER  reduce 53
	RPAR  reduce 53


state 120
	expresion : expresion . SUM_RES expresion  (53)
	expresion : expresion . MUL_DIV_MOD expresion  (54)
	expresion : expresion MUL_DIV_MOD expresion .  (54)

	.  reduce 54


state 121
	sentencias : sentencias . sentencia  (27)
	sentencia : MIENTRAS e_bool HACER sentencias . FIN  (31)

	INICIO  shift 53
	FIN  shift 131
	SI  shift 55
	MIENTRAS  shift 56
	HACER  shift 57
	SEGUN  shift 58
	ESCRIBIR  shift 59
	DEVOLVER  shift 60
	LEER  shift 61
	TERMINAR  shift 62
	ID  shift 63
	.  error

	sentencia  goto 64
	variable  goto 65


state 122
	sentencia : MIENTRAS e_bool . HACER sentencias FIN  (31)
	sentencia : HACER sentencias MIENTRAS e_bool . PYC  (32)
	e_bool : e_bool . O e_bool  (45)
	e_bool : e_bool . Y e_bool  (46)

	PYC  shift 132
	HACER  shift 102
	O  shift 97
	Y  shift 98
	.  error


state 123
	sentencia : SEGUN LPAR variable RPAR . HACER casos predeterminado FIN  (33)

	HACER  shift 133
	.  error


state 124
	arreglo : CORIZQ expresion CORDER .  (66)
	arreglo : CORIZQ expresion CORDER . arreglo  (67)

	CORIZQ  shift 87
	PYC  reduce 66
	ENTONCES  reduce 66
	HACER  reduce 66
	COMA  reduce 66
	ASIG  reduce 66
	O  reduce 66
	Y  reduce 66
	OPERADOR_RELACIONAL  reduce 66
	SUM_RES  reduce 66
	MUL_DIV_MOD  reduce 66
	CORDER  reduce 66
	RPAR  reduce 66

	arreglo  goto 134


state 125
	variable_comp : LPAR parametros RPAR .  (63)

	.  reduce 63


state 126
	lista_param : lista_param COMA . expresion  (70)

	ID  shift 63
	CARACTER  shift 70
	CADENA  shift 71
	NUM  shift 72
	LPAR  shift 74
	.  error

	expresion  goto 135
	variable  goto 78


state 127
	dato_est_sim : dato_est_sim PUNTO ID .  (64)

	.  reduce 64


state 128
	sentencia : variable ASIG expresion PYC .  (34)

	.  reduce 34


state 129
	sentencia : SI e_bool ENTONCES sentencias FIN .  (29)

	.  reduce 29


state 130
	sentencia : SI e_bool ENTONCES sentencias SINO . sentencias FIN  (30)
	sentencias : .  (28)

	.  reduce 28

	sentencias  goto 136


state 131
	sentencia : MIENTRAS e_bool HACER sentencias FIN .  (31)

	.  reduce 31


state 132
	sentencia : HACER sentencias MIENTRAS e_bool PYC .  (32)

	.  reduce 32


state 133
	sentencia : SEGUN LPAR variable RPAR HACER . casos predeterminado FIN  (33)

	CASO  shift 137
	.  error

	casos  goto 138


state 134
	arreglo : CORIZQ expresion CORDER arreglo .  (67)

	.  reduce 67


state 135
	expresion : expresion . SUM_RES expresion  (53)
	expresion : expresion . MUL_DIV_MOD expresion  (54)
	lista_param : lista_param COMA expresion .  (70)

	SUM_RES  shift 100
	MUL_DIV_MOD  shift 101
	COMA  reduce 70
	RPAR  reduce 70


state 136
	sentencias : sentencias . sentencia  (27)
	sentencia : SI e_bool ENTONCES sentencias SINO sentencias . FIN  (30)

	INICIO  shift 53
	FIN  shift 139
	SI  shift 55
	MIENTRAS  shift 56
	HACER  shift 57
	SEGUN  shift 58
	ESCRIBIR  shift 59
	DEVOLVER  shift 60
	LEER  shift 61
	TERMINAR  shift 62
	ID  shift 63
	.  error

	sentencia  goto 64
	variable  goto 65


state 137
	casos : CASO . NUM DOSP sentencias casos  (41)
	casos : CASO . NUM DOSP sentencias  (42)

	NUM  shift 140
	.  error


state 138
	sentencia : SEGUN LPAR variable RPAR HACER casos . predeterminado FIN  (33)
	predeterminado : .  (44)

	PRED  shift 141
	FIN  reduce 44

	predeterminado  goto 142


state 139
	sentencia : SI e_bool ENTONCES sentencias SINO sentencias FIN .  (30)

	.  reduce 30


state 140
	casos : CASO NUM . DOSP sentencias casos  (41)
	casos : CASO NUM . DOSP sentencias  (42)

	DOSP  shift 143
	.  error


state 141
	predeterminado : PRED . DOSP sentencias  (43)

	DOSP  shift 144
	.  error


state 142
	sentencia : SEGUN LPAR variable RPAR HACER casos predeterminado . FIN  (33)

	FIN  shift 145
	.  error


state 143
	casos : CASO NUM DOSP . sentencias casos  (41)
	casos : CASO NUM DOSP . sentencias  (42)
	sentencias : .  (28)

	.  reduce 28

	sentencias  goto 146


state 144
	predeterminado : PRED DOSP . sentencias  (43)
	sentencias : .  (28)

	.  reduce 28

	sentencias  goto 147


state 145
	sentencia : SEGUN LPAR variable RPAR HACER casos predeterminado FIN .  (33)

	.  reduce 33


state 146
	sentencias : sentencias . sentencia  (27)
	casos : CASO NUM DOSP sentencias . casos  (41)
	casos : CASO NUM DOSP sentencias .  (42)

	INICIO  shift 53
	SI  shift 55
	MIENTRAS  shift 56
	HACER  shift 57
	SEGUN  shift 58
	ESCRIBIR  shift 59
	DEVOLVER  shift 60
	LEER  shift 61
	TERMINAR  shift 62
	CASO  shift 137
	ID  shift 63
	FIN  reduce 42
	PRED  reduce 42

	sentencia  goto 64
	casos  goto 148
	variable  goto 65


state 147
	sentencias : sentencias . sentencia  (27)
	predeterminado : PRED DOSP sentencias .  (43)

	INICIO  shift 53
	SI  shift 55
	MIENTRAS  shift 56
	HACER  shift 57
	SEGUN  shift 58
	ESCRIBIR  shift 59
	DEVOLVER  shift 60
	LEER  shift 61
	TERMINAR  shift 62
	ID  shift 63
	FIN  reduce 43

	sentencia  goto 64
	variable  goto 65


state 148
	casos : CASO NUM DOSP sentencias casos .  (41)

	.  reduce 41


46 terminals, 28 nonterminals
72 grammar rules, 149 states
